# sam-solace-architect-agents

./: .gitignore  refresh-plugin.sh
configs/gateways/: solace-architect-webui-entrypoint.yaml
solace-architect-blueprint/: README.md  config.yaml  pyproject.toml
solace-architect-blueprint/src/solace_architect_blueprint/: __init__.py  lifecycle.py  prompt.py
solace-architect-blueprint/src/solace_architect_blueprint/report_generator/: __init__.py  render.py
solace-architect-blueprint/src/solace_architect_blueprint/report_generator/templates/: report.css  report.js
solace-architect-discovery/: README.md  config.yaml  pyproject.toml  pytest.ini
solace-architect-discovery/src/solace_architect_discovery/: __init__.py  lifecycle.py  prompt.py
solace-architect-discovery/tests/: test_config_yaml.py  test_token_budget.py
solace-architect-domain/: README.md  config.yaml  pyproject.toml
solace-architect-domain/src/solace_architect_domain/: __init__.py  lifecycle.py  prompt.py
solace-architect-ep-provisioning/: README.md  config.yaml  pyproject.toml
solace-architect-ep-provisioning/src/solace_architect_ep_provisioning/: __init__.py  lifecycle.py  prompt.py
solace-architect-event-portal/: README.md  config.yaml  pyproject.toml
solace-architect-event-portal/src/solace_architect_event_portal/: __init__.py  lifecycle.py  prompt.py
solace-architect-orchestrator/: README.md  config.yaml  pyproject.toml
solace-architect-orchestrator/src/solace_architect_orchestrator/: __init__.py  lifecycle.py  prompt.py
solace-architect-provisioning/: README.md  config.yaml  pyproject.toml
solace-architect-provisioning/src/solace_architect_provisioning/: __init__.py  lifecycle.py  prompt.py
solace-architect-reviewer-architect/: README.md  config.yaml  pyproject.toml
solace-architect-reviewer-architect/src/solace_architect_reviewer_architect/: __init__.py  lifecycle.py  prompt.py
solace-architect-reviewer-developer/: README.md  config.yaml  pyproject.toml
solace-architect-reviewer-developer/src/solace_architect_reviewer_developer/: __init__.py  lifecycle.py  prompt.py
solace-architect-reviewer-ops/: README.md  config.yaml  pyproject.toml
solace-architect-reviewer-ops/src/solace_architect_reviewer_ops/: __init__.py  lifecycle.py  prompt.py
solace-architect-reviewer-security/: README.md  config.yaml  pyproject.toml
solace-architect-reviewer-security/src/solace_architect_reviewer_security/: __init__.py  lifecycle.py  prompt.py
solace-architect-validation/: README.md  config.yaml  pyproject.toml
solace-architect-validation/src/solace_architect_validation/: __init__.py  lifecycle.py  prompt.py
solace-architect-webui-entrypoint/: Makefile  README.md  config.yaml  pyproject.toml
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/: __init__.py  _sse_persistence.py  admin.py  app.py  component.py  error_classifier.py  lifecycle.py
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/auth/: __init__.py  db.py  middleware.py  passwords.py  ratelimit.py  routes.py  sessions.py
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/routes/: __init__.py  api.py
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/: index.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/admin/: grounding.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/assets/: app.js  styles.css
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/intake/: index.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/login/: index.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/signup/: index.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/visualizer/: index.html
solace-architect-webui-entrypoint/src/solace_architect_webui_entrypoint/webui/visualizer/assets/: index-7kaeAAC7.js  index-B7U6pRXF.js  index-Ctcgk3zz.css  index-DAPm34BY.js  index-rIimwd50.js
solace-architect-webui-entrypoint/tests/: test_admin_grounding_e2e.py  test_admin_grounding_routes.py  test_app_module.py  test_routes.py  test_static_assets.py  test_user_isolation.py
solace-architect-webui-entrypoint/visualizer-src/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
solace-architect-webui-entrypoint/visualizer-src/src/broker/: solaceClient.ts
solace-architect-webui-entrypoint/visualizer-src/src/bus/: animations.ts  eventBus.ts  types.ts
solace-architect-webui-entrypoint/visualizer-src/src/parse/: payload.test.ts  payload.ts  topic.test.ts  topic.ts
solace-architect-webui-entrypoint/visualizer-src/src/sim/: runner.ts  scenarios.ts
solace-architect-webui-entrypoint/visualizer-src/src/ui/: App.tsx  Canvas.tsx  ConfigPanel.tsx  Controls.tsx  Timeline.tsx  styles.css  useBusVersion.ts
