[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.solace_architect_orchestrator.metadata]
type = "agent"

[project]
name = "solace-architect-orchestrator"
version = "0.1.0"
authors = [{ name = "Solace Architect Contributors" }]
description = "Solace Architect — central coordinator agent (SAOrchestratorAgent). Sequences discovery, design, review, validation, blueprint, and (opt-in) provisioning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "solace-architect-core>=0.1.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solace_architect_orchestrator"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "solace_architect_orchestrator/config.yaml"
"README.md" = "solace_architect_orchestrator/README.md"
"pyproject.toml" = "solace_architect_orchestrator/pyproject.toml"
