[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.solace_architect_provisioning.metadata]
type = "agent"

[project]
name = "solace-architect-provisioning"
version = "0.1.0"
authors = [{ name = "Solace Architect Contributors" }]
description = "Solace Architect — opt-in live ep provisioning via ep designer mcp. strictly opt-in (intake.preferences.provision_event_portal). never silently skips."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "solace-architect-core>=0.1.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solace_architect_provisioning"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "solace_architect_provisioning/config.yaml"
"README.md" = "solace_architect_provisioning/README.md"
"pyproject.toml" = "solace_architect_provisioning/pyproject.toml"
