[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.solace_architect_reviewer_architect.metadata]
type = "agent"

[project]
name = "solace-architect-reviewer-architect"
version = "0.1.0"
authors = [{ name = "Solace Architect Contributors" }]
description = "Solace Architect — architecture-perspective reviewer — trade-offs, component choices, simpler alternatives, reference-architecture alignment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "solace-architect-core>=0.1.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solace_architect_reviewer_architect"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "solace_architect_reviewer_architect/config.yaml"
"README.md" = "solace_architect_reviewer_architect/README.md"
"pyproject.toml" = "solace_architect_reviewer_architect/pyproject.toml"
