[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.solace_architect_validation.metadata]
type = "agent"

[project]
name = "solace-architect-validation"
version = "0.1.0"
authors = [{ name = "Solace Architect Contributors" }]
description = "Solace Architect — consistency, antipattern, requirement-tracing, deferred-finding validation. produces the gating report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "solace-architect-core>=0.1.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solace_architect_validation"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "solace_architect_validation/config.yaml"
"README.md" = "solace_architect_validation/README.md"
"pyproject.toml" = "solace_architect_validation/pyproject.toml"
